[project]
name = "rohen"
authors = [
    { name = "craft interactive", email = "nishi@craftinteractive.ae"}
]
description = "custom app"
requires-python = ">=3.6"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=11.0.0,<18.0.0"